--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "slim/psr7": "^1",
         "slim/slim": "^4.4",
         "slim/twig-view": "3.0",
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4"
@@ -13,11 +14,6 @@
     "autoload": {
         "psr-4": {
             "App\\": "app"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Test\\": "tests/"
         }
     },
     "config": {
